--- a/css/style2.css
+++ b/css/style2.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family:  Monschon;
-  src: url(../monschone-regular-monschone-regular-400.otf);
+  /* src: url(../monschone-regular-monschone-regular-400.otf); */
 }
 body {
     overflow-X: hidden;
